welcome.lessons.welcome.array.island.Island.scala.error
island:1: error: type mismatch;
 found   : Unit
 required: Int
def island(num:Array[Int]): Int = {
                                  ^